fixed overflow-x

--- a/style.css
+++ b/style.css
@@ -7,7 +7,9 @@
 	font: inherit;
 	vertical-align: baseline;
   list-style: none;
-
+}
+html, body {
+  overflow-x: hidden;
 }
 header, .header, .blog-entry {
   background-color: #222;
@@ -21,7 +23,8 @@ body {
 body {
   line-height: 1;
   background-color: #fff;
-  overflow-x: hidden;
+  width: 100vw;
+
 }
 header {
   height: 10vh;
@@ -75,7 +78,7 @@ header {
   top: -7px;
   left: -5px;
   cursor: pointer;
-  opacity: 0; 
+  opacity: 0;
   z-index: 2;
   -webkit-touch-callout: none;
 }
